mostly good blogs - frontMattter images a pain

--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -2,7 +2,7 @@
 title: "Mastering the Attention Economy: Effective Strategies for Business Growth"
 description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
 date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+featuredImage: "../images/illustrations/inbox-money.png"
 ---
 
 import { Link } from 'gatsby'
