--- a/src/pages/blog/boost-email-responses.mdx
+++ b/src/pages/blog/boost-email-responses.mdx
@@ -1,15 +1,11 @@
 ---
 title: "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates"
 description: "Unlock the secrets to dramatically improving email response rates with targeted strategies. Learn how to refine your delivery, open rates, and engagement for better communication outcomes."
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+date: "2022-12-16"
+featuredImage: "../images/blog/responding-to-a-great-email.png"
 ---
 
-import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import signStick from '../../images/blog/sticks-empty.jpg'
+import respondingToEmail from '../../images/blog/responding-to-a-great-email.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
@@ -24,7 +20,7 @@ description: "Unlock the secrets to dramatically improving email response rates 
 
   Monitoring metrics are key in figuring out whether or not new tactics and strategies are working. While an important metric, response rate is not the only metric that should be measured. Different metrics are available along the email process that can correspond to the effectiveness of various email components.
 
-  ![](RackMultipart20231114-1-zntggz_html_100a1daf808bb48d.png)
+  <img src={respondingToEmail} alt="everyone has a hook they love to see!" />
 
   ## **Delivery rates**
 
