--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Driving Survey Participation: Smart Incentivization Techniques"
 description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+date: "2022-01-10"
+featuredImage: "../images/blog/distracted-boyfriend-exit-survey.jpg"
 ---
 
 import { Link } from 'gatsby'
