--- a/src/pages/blog/effective-use-cases.mdx
+++ b/src/pages/blog/effective-use-cases.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Incentivizing Engagement: The FynCom and Nano Foundation Success Story"
 date: "2022-12-06"
-featuredImage: "../../images/blog/fyncom-nano-foundation-short.png"
+featuredImage: "../images/blog/fyncom-nano-foundation-short.png"
 description: "Discover how the Nano Foundation leveraged FynCom's innovative rewards technology to skyrocket translation activity for their multilingual blog, fostering global engagement and enhancing user retention."
 ---
 
