--- a/src/pages/blog/gamify-rewards-program.mdx
+++ b/src/pages/blog/gamify-rewards-program.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Gamify Rewards Program"
 date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+featuredImage: "../images/illustrations/inbox-money.png"
 ---
 
 import { Link } from 'gatsby'
