--- a/src/pages/blog/response-economy-strategies.mdx
+++ b/src/pages/blog/response-economy-strategies.mdx
@@ -1,19 +1,18 @@
 ---
-title: "Response Economy Strategies"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Navigating the Response Economy: Strategies to Lower Costs and Boost Engagement"
+date: "2022-03-10"
+featuredImage: "../images/blog/response-economy-a-fyncom-story.png"
+description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+topics: "Response Economy"
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import communications from '../../images/blog/communications-Icons.png'
+import flyingPeople from '../../images/illustrations/flying-people.jpg'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
+  title: "Navigating the Response Economy: Strategies to Lower Costs and Boost Engagement",
 description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
 };
 
@@ -26,7 +25,7 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   The response economy is based on the cost to get a response to an outbound or transactional message. This cost per response (CPR) varies depending on the channel used as well as the demographics of the respondent.\*
 
-  ![](RackMultipart20231114-1-imwfl0_html_a2905c33ffd7749.png)
+  <img src={communications} alt="communications is all around us" />
 
   Mastery of the response economy is key for business leaders focused on prospecting, lead generation, lead nurturing, and revenue technologies. Additionally, this concept also applies to transactional messages, like exit surveys to understand why customers churn or leave marketing sequences. Do you remember the last time you answered that _"why did you unsubscribe"_ form? Me neither.
 
@@ -34,19 +33,25 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   For now, we'll use general metrics to continue this article. When businesses send out emails to potential customers, they can expect to spend around $9 to $1,000 per month on average, depending on the number of subscribers to their mailing list and the platform used. However, this cost can change drastically when getting responses from a business's ideal customer profile. For example, if a company wants responses from high-value customers, then the cost could be as high as $3,000 per month. Additionally, the response cost can vary greatly depending on the communication platform used. Generally, phone calls tend to be more expensive than text messages or email campaigns.
 
-  On average, a reasonable response rate for your email or other campaigns is [10%](https://www.campaignmonitor.com/resources/knowledge-base/what-is-a-good-or-average-email-response-rate-for-email-marketing/). This can vary by about 5-10%, depending on how experienced you are and what marketing tactics you use. Take the average cost of your campaigns and divide by the total responses to get your average [cost per response](https://www.fyncom.com/pricing) (aCPR). Based on these stats, the aCPR is around $19 for most companies.
+  On average, a reasonable response rate for your email or other campaigns is [10%](https://www.campaignmonitor.com/resources/knowledge-base/what-is-a-good-or-average-email-response-rate-for-email-marketing/). This can vary by about 5-10%, depending on how experienced you are and what marketing tactics you use. Take the average cost of your campaigns and divide by the total responses to get your average <Link to={"/pricing"}> cost per response</Link> (aCPR). Based on these stats, the aCPR is around $19 for most companies.
 
   ## **Cut Costs with the Right Strategy**
 
   Understanding analytics and determining what inquiries to respond to will help any business better manage their time while also increasing conversion rates. Understanding who your ideal customer profile is and which communication platform they are most receptive to (i.e., email vs. text message) is important because it helps businesses reach customers where they're at. At the same time, knowing when different people tend to engage with certain platforms gives businesses another thing to keep in mind for managing social media opportunities, which has evolved considerably with this new digital environment.
 
+  [//]: # put in side by side componenet()
   ## **Profit from the Response Economy**
 
-  **Error! Filename not specified.**
+  <div className="use-case-section">
+    <div className="use-case-image">
+      <img src={flyingPeople} alt="work with us and you'll have magical powers like the people in this image" />
+    </div>
+    <div className="use-case-description">
+      FynCom helps companies navigate the response economy by providing a "conditional rewards" platform that integrates with tools like Sendgrid and SlickText, allowing businesses to use A/B testing of incentives in emails and texts. As a result, customers get automatically rewarded at key points of their journey, which makes marketing efforts more effective. At FynCom, we're focused on automating the delivery of rewards in response to digital actions, letting companies focus on understanding their metrics, talking to more customers, and increasing conversion rates at every stage of the customer's journey. By using FynCom, businesses can manage their CPR, save time, and increase their response rates, leading to efficient sales, marketing & product feedback.
+    </div>
+  </div>
 
-  FynCom helps companies navigate the response economy by providing a "conditional rewards" platform that integrates with tools like Sendgrid and SlickText, allowing businesses to use A/B testing of incentives in emails and texts. As a result, customers get automatically rewarded at key points of their journey, which makes marketing efforts more effective. At FynCom, we're focused on automating the delivery of rewards in response to digital actions, letting companies focus on understanding their metrics, talking to more customers, and increasing conversion rates at every stage of the customer's journey. By using FynCom, businesses can manage their CPR, save time, and increase their response rates, leading to efficient sales, marketing & product feedback.
-
-  Companies that want to increase their conversion rates at every stage of their sales & marketing funnels need to utilize tools such as FynCom. The idea of zero-party data is something that if you get ahead of now, with tools like FynCom, you will be able to grow your business while others stagnate. [Reach out to us today](https://www.fyncom.com/chat-with-us) to learn exactly how our tech can work for you.
+  Companies that want to increase their conversion rates at every stage of their sales & marketing funnels need to utilize tools such as FynCom. The idea of zero-party data is something that if you get ahead of now, with tools like FynCom, you will be able to grow your business while others stagnate. <Link to={"/contact"}>Reach out to us today</Link> to learn exactly how our tech can work for you.
 
   _\*The rise of privacy standards and consumer empowerment will have an effect on CPR. We will discuss that in a future article where we talk about third party data, first party data, and "zero party data"._
 </Wrapper>
