--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -2,7 +2,7 @@
 title: "Email Scams: Protection Tactics and Profitable Solutions"
 description: "Discover how you can turn the tide on email spam with FynCom's innovative filter technology and tap into instant rewards for every scam email blocked. It's time to declutter your inbox and get paid for it!"
 date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+featuredImage: "../images/illustrations/inbox-money.png"
 ---
 
 import { Link } from 'gatsby'
