--- a/src/pages/blog/marketing-roi-gifting.mdx
+++ b/src/pages/blog/marketing-roi-gifting.mdx
@@ -1,20 +1,16 @@
 ---
-title: "Marketing Roi Gifting"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Amplify Your Marketing ROI: The Smart Strategy of Incentivized Gifting"
+date: "2022-11-10"
+featuredImage: "../images/blog/marketing-rewards-fyncom.png"
+description: "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty."
 ---
 
-import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import marketingRewards from '../../images/blog/marketing-rewards-fyncom.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+  title: "Amplify Your Marketing ROI: The Smart Strategy of Incentivized Gifting",
+  description: "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty."
 };
 
 <Wrapper seo={meta}>
@@ -24,7 +20,7 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   Today's omni-channel multi-touchpoint marketing strategies further complicate ROI calculations. Being able to separate the costs and goals at different touch points can help to see the effectiveness of each campaign individually.
 
-  ![](RackMultipart20231114-1-l9skak_html_58f558661cc16564.png)
+  <img src={marketingRewards} alt="5x better email response rates!" />
 
   ## **Gifting makes marketing ROI trackable**
 
