--- a/src/pages/blog/response-generation.mdx
+++ b/src/pages/blog/response-generation.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Boosting Response Rates: Unleashing the Power of Automated Rewards"
 date: "2022-11-29"
-featuredImage: "../../images/blog/feels-good-to-get-responses.gif"
+featuredImage: "../images/blog/feels-good-to-get-responses.gif"
 description: "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably."
 topics: "Market Research, Response Economy"
 ---
@@ -38,10 +38,15 @@ title: "Boosting Response Rates: Unleashing the Power of Automated Rewards",
   [//]: # (put in side by side component)
 
   <img src={linkedInSurvey} alt="Product marketers want responses!" />
-
-  Product marketers want responses!
-
-  63% of respondents answered that if they could increase responses to their emails, surveys, texts, calls, etc…. They'd be able to be much more successful at their jobs and move their businesses forward. To be fair, I may have asked leading questions here. Open to feedback!
+  <div className="use-case-section">
+    <div className="use-case-image">
+      <img src={linkedInSurvey} alt="Product marketers want responses!" />
+    </div>
+    <div className="use-case-description">
+      Product marketers want responses!
+      63% of respondents answered that if they could increase responses to their emails, surveys, texts, calls, etc…. They'd be able to be much more successful at their jobs and move their businesses forward. To be fair, I may have asked leading questions here. Open to feedback!
+    </div>
+  </div>
 
   ## **Narrowing down on your product market fit**
 
