--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -1,20 +1,18 @@
 ---
-title: "Response Rate Improvement"
-date: "2023-11-14"
-featuredImage: "../../images/illustrations/inbox-money.png"
+title: "Response Mining: The New Frontier of Digital Engagement and Monetization"
+date: "2022-07-31"
+featuredImage: "../images/illustrations/inbox-money.png"
+description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
 ---
 
 import { Link } from 'gatsby'
-import angrySticks from '../../images/blog/stick-angry.jpg'
-import happySticks from '../../images/blog/stick-happy-line-go-up.jpg'
-import iDontCareStick from '../../images/blog/stick-done-with-it.jpg'
-import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
+import attentionFragmented from '../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png'
+import decliningResponses from '../../images/blog/fyncom_pitch-deck_trends-response.png'
 import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-title: "Mastering the Attention Economy: Effective Strategies for Business Growth",
-description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
+  title: "Response Mining: The New Frontier of Digital Engagement and Monetization",
+  description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
 };
 
 <Wrapper seo={meta}>
@@ -32,11 +30,11 @@ description: "Explore the evolution of the attention economy and uncover cutting
   1. More businesses are created everyday. Those businesses want your feedback so they can grow and beat the incumbent players in their space.
   2. Technological tools/services are making it 10x easier for businesses to automate sequences of emails, calls, texts, DMs, etc. to their "prospects". These sequences can have anywhere from 6 to 20 actions associated with them.
 
-  ![](RackMultipart20231114-1-tnket9_html_7138dea66d1936d6.png)
+  <img src={attentionFragmented} alt="how do you stand out when your call or text comes in??" />
 
   The exponential rise in our technology and similar rise in population of people/businesses make it incredibly difficult for even the best national institutions to get the responses they used to get.
 
-  ![](RackMultipart20231114-1-tnket9_html_449f2449a94e0c4.png)
+  <img src={decliningResponses} alt="saturated communications creates a declinig response rate for all" />
 
   ## **Why should I care?**
 
@@ -48,9 +46,11 @@ description: "Explore the evolution of the attention economy and uncover cutting
 
   ## **My ask to you**
 
-  **Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? [Sign up here to receive rewards emails](https://www.fyncom.com/subscribe) that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
+[//]: # todo(todo: fix this lin)
+  **Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? <Link to={"/subscribe"}>Sign up here to receive rewards emails</Link> that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
 
-  [Subscribe for more](https://www.fyncom.com/subscribe)
+  [//]: # (turn this into a button)
+  <Link to={"/subscribe"}>Subscribe for more</Link>
 
   PS - Oh, and we haven't even talked about how to address the actual SCAMS / Fraud that happen through these channels. Stay tuned!
 
