fixed graphQL sort and image paths

--- a/src/pages/blog/future-rewards-technology.mdx
+++ b/src/pages/blog/future-rewards-technology.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Revolutionizing Engagement: The Rise of Interactive Rewards Technology"
 date: "2023-11-14"
-featuredImage: "../images/illustrations/inbox-money.png"
+featuredImage: "../../images/illustrations/inbox-money.png"
 description: "Unveil the transformative impact of interactive rewards in sales and marketing. Learn how automation and personalization in rewards programs are setting new standards for customer interaction and loyalty."
 ---
 
