--- a/src/pages/blog/marketing-roi-gifting.mdx
+++ b/src/pages/blog/marketing-roi-gifting.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Amplify Your Marketing ROI: The Smart Strategy of Incentivized Gifting"
 date: "2022-11-10"
-featuredImage: "../images/blog/marketing-rewards-fyncom.png"
+featuredImage: "../../images/blog/marketing-rewards-fyncom.png"
 description: "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty."
 ---
 
