--- a/src/pages/blog/response-economy-strategies.mdx
+++ b/src/pages/blog/response-economy-strategies.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Navigating the Response Economy: Strategies to Lower Costs and Boost Engagement"
 date: "2022-03-10"
-featuredImage: "../images/blog/response-economy-a-fyncom-story.png"
+featuredImage: "../../images/blog/response-economy-a-fyncom-story.png"
 description: "Explore the evolution of the attention economy and uncover cutting-edge strategies to capture consumer interest, drive engagement, and boost your bottom line in the digital landscape."
 topics: "Response Economy"
 ---
