--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Response Mining: The New Frontier of Digital Engagement and Monetization"
 date: "2022-07-31"
-featuredImage: "../images/illustrations/inbox-money.png"
+featuredImage: "../../images/illustrations/inbox-money.png"
 description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
 ---
 
