--- a/src/pages/blog/zero-party-data-guide.mdx
+++ b/src/pages/blog/zero-party-data-guide.mdx
@@ -2,7 +2,7 @@
 title: "Harnessing Zero Party Data: Transform Your Marketing with Consensual Insights"
 description: "Unlock the power of Zero Party Data to revolutionize your marketing approach. Learn why it's crucial for personalization and privacy, and discover innovative strategies to ethically gather valuable consumer data."
 date: "2022-11-15"
-featuredImage: "../images/blog/zero-party-data-cookies.png"
+featuredImage: "../../images/blog/zero-party-data-cookies.png"
 ---
 
 import cookies from '../../images/blog/zero-party-data-cookies.png'
