--- a/src/pages/blog/customer-survey-incentives.mdx
+++ b/src/pages/blog/customer-survey-incentives.mdx
@@ -2,7 +2,7 @@
 title: "Driving Survey Participation: Smart Incentivization Techniques"
 description: "Revolutionize your approach to customer surveys with strategic incentives. Boost participation rates and gather insightful feedback while forging stronger customer relationships."
 date: "2022-01-10"
-featuredImage: "../images/blog/distracted-boyfriend-exit-survey.jpg"
+featuredImage: "../../images/blog/distracted-boyfriend-exit-survey.jpg"
 ---
 
 import { Link } from 'gatsby'
