--- a/src/pages/blog/interactive-rewards-tips.mdx
+++ b/src/pages/blog/interactive-rewards-tips.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Interactive Rewards Tips"
 date: "2023-11-14"
-featuredImage: "../images/illustrations/inbox-money.png"
+featuredImage: "../../images/illustrations/inbox-money.png"
 ---
 
 import { Link } from 'gatsby'
