--- a/src/pages/blog/optimize-rewards-analytics.mdx
+++ b/src/pages/blog/optimize-rewards-analytics.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Optimize Rewards Analytics"
 date: "2023-11-14"
-featuredImage: "../images/illustrations/inbox-money.png"
+featuredImage: "../../images/illustrations/inbox-money.png"
 ---
 
 import { Link } from 'gatsby'
